[package]
name = "soundcloud"
authors = [
    "Mikkel Kroman <mk@uplink.io>",
    "Max Jöhnk <maxjoehnk@gmail.com>",
    "Aaron Enberg, <pastaaroni@gmail.com>"
]
version = "0.4.0"
license = "MIT/Apache-2.0"
keywords = ["soundcloud", "http", "api", "client"]
repository = "https://github.com/maxjoehnk/soundcloud-rs"
description = "SoundCloud API implementation in Rust"
edition = "2018"
categories = ["api-bindings"]
readme = "README.md"

[badges]
travis-ci = { repository = "maxjoehnk/soundcloud-rs" }
is-it-maintained-issue-resolution = { repository = "https://github.com/maxjoehnk/soundcloud-rs" }
is-it-maintained-open-issues = { repository = "https://github.com/maxjoehnk/soundcloud-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "stream"] }
url = "2.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "fs"] }
tokio-util = { version = "~0.3.0", features = ["compat"] }
